Stop navbar from overlapping on small screens, tweak image ratios

--- a/_sass/_article-page.scss
+++ b/_sass/_article-page.scss
@@ -6,12 +6,11 @@ $left-bg: adjust-color($dd-blue, $lightness: 60%, $saturation: 50%);
 $leftbar-width: emCalc(85);
 
 article.article {
-  top: - $topbar-margin-top - emCalc($topbar-height) - $topbar-margin-top;
   position: relative;
 
   header {
     width: 100%;
-    @include image-ratio(map-get($ratios, "ratio4x3"));
+    @include image-ratio(map-get($ratios, "ratio1x1"));
     .caption {
       @include caption($caption-bg);
       text-align: center;
@@ -56,39 +55,48 @@ article.article {
 }
 
 @media #{$small} {
-  article.article header {
-    padding-bottom: map-get($ratios, "ratio16x9");
-    .caption {
-      left: $leftbar-width;
-      width: auto;
-      right: 33%;
+  article.article {
+    top: - $topbar-margin-top - emCalc($topbar-height) - $topbar-margin-top;
+    header {
+      padding-bottom: map-get($ratios, "ratio3x2");
+      .caption {
+        left: $leftbar-width;
+        width: auto;
+        right: 33%;
+      }
+    }
+    .content {
+      padding-left: 3em + $leftbar-width;
+      padding-top: 2em;
+      &:before {
+        height: 999em;
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: $leftbar-width;
+        background-color: $left-bg;
+      }
+      img {
+        width: 100%;
+        float: right;
+        position: relative;
+        margin: 0.25em -50% 0.25em 1em;
+      }
+      & > p:first-child {
+        padding-right: 1em;
+        font-size: 1.2em;
+      }
+      p {
+        padding-right: percentage(1/3);
+        padding-left: 0;
+      }
     }
   }
-  article.article .content {
-    padding-left: 3em + $leftbar-width;
-    padding-top: 2em;
-    &:before {
-      height: 999em;
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: $leftbar-width;
-      background-color: $left-bg;
-    }
-    img {
-      width: 100%;
-      float: right;
-      position: relative;
-      margin: 0.25em -50% 0.25em 1em;
-    }
-    & > p:first-child {
-      padding-right: 1em;
-      font-size: 1.2em;
-    }
-    p {
-      padding-right: percentage(1/3);
-      padding-left: 0;
-    }
+}
+
+@media #{$medium} {
+  article.article header {
+    padding-bottom: map-get($ratios, "ratio16x9");
   }
 }
 
