--- a/_sass/_topbar.scss
+++ b/_sass/_topbar.scss
@@ -162,7 +162,6 @@ header.site-header {
     background-color: lighten($dd-blue, 5%);
     font-size: $em-base;
     margin: 0;
-    margin-bottom: $topbar-margin-bottom;
     max-height: 0;
     overflow-y: hidden;
     li {
